# agentproof

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  idea-draft.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
demo/: README.md  __init__.py  app.py
docs/: api.md  concepts.md  examples.md  getting-started.md  index.md  threat-model.md
docs/stylesheets/: extra.css
examples/: roundtrip_cli.py  service_flow.py
src/agentproof/: __init__.py  __main__.py  api.py  baselines.py  benchmarking.py  cli.py  exceptions.py  models.py
src/agentproof/challenges/: __init__.py  base.py  llm_common.py  multi_pass.py  obfuscated_text.py  proof_of_work.py  semantic_math.py
src/agentproof/utils/: __init__.py  hashing.py  normalization.py  obfuscation.py
tests/: test_api.py  test_baselines.py  test_benchmarking.py  test_cli.py  test_demo_app.py  test_models.py
